# candy

./: CANDY_CANDOR_demo.Rmd  CANDY_tutorials.Rmd  CANDY_tutorials.html  README.md  analysis.ipynb  interface.py  pyproject.toml  transcribe.py
R version (transcript)/: CANDY_batch_process.R  CANDY_function.R
candy/converters/: candor.py
candy/transformers/: __init__.py
candy/transformers/conversation_dynamics/: conversation_dynamics.py  metrics.py
convodynamics/transformers/conversation_dynamics/: conversation_dynamics.py  metrics.py
notebooks/: analysis.ipynb
scripts/: interface.py  transcribe.py
